--- a/compose.debug.yaml
+++ b/compose.debug.yaml
@@ -1,9 +1,9 @@
 services:
-  giatlas:
-    image: giatlas
+  webserver:
+    image: webserver
     build:
-      context: .
-      dockerfile: ./Dockerfile
+      context: ./webserver
+      dockerfile: Dockerfile
     command: ["sh", "-c", "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5678 -m flask run --no-debugger --no-reload --host 0.0.0.0 --port 5002"]
     ports:
       - 5002:5002
