--- a/compose.yaml
+++ b/compose.yaml
@@ -1,8 +1,8 @@
 services:
-  giatlas:
-    image: giatlas
+  webserver:
+    image: webserver
     build:
-      context: .
-      dockerfile: ./Dockerfile
+      context: ./webserver
+      dockerfile: Dockerfile
     ports:
       - 5002:5002
