--- a/compose.yaml
+++ b/compose.yaml
@@ -6,3 +6,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - 5002:5002
+  client:
+    image: client
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    ports:
+      - 5173:5173
