--- a/compose.debug.yaml
+++ b/compose.debug.yaml
@@ -1,12 +1,19 @@
 services:
   webserver:
     image: webserver
+    volumes:
+      - ./app
     build:
       context: ./webserver
       dockerfile: Dockerfile
-    command: ["sh", "-c", "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5678 -m flask run --no-debugger --no-reload --host 0.0.0.0 --port 5002"]
     ports:
       - 5002:5002
-      - 5678:5678
-    environment:
-      - FLASK_APP=src/python/main.py
+  client:
+    image: client
+    volumes:
+      - ./app
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    ports:
+      - 5173:5173
