both watching well

--- a/compose.yaml
+++ b/compose.yaml
@@ -16,5 +16,10 @@ services:
     build:
       context: ./client
       dockerfile: Dockerfile
+    develop:
+      watch:
+        - path: ./client
+          action: sync
+          target: /app
     ports:
       - 5173:5173
