--- a/compose.yaml
+++ b/compose.yaml
@@ -23,3 +23,28 @@ services:
           target: /app
     ports:
       - 5173:5173
+
+  db:
+    image: postgres
+    restart: always
+    # set shared memory limit when using docker compose
+    shm_size: 128mb
+    # or set shared memory limit when deploy via swarm stack
+    #volumes:
+    #  - type: tmpfs
+    #    target: /dev/shm
+    #    tmpfs:
+    #      size: 134217728 # 128*2^20 bytes = 128Mb
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_USER: username
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: gidb
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
+
