--- a/webserver/pyproject.toml
+++ b/webserver/pyproject.toml
@@ -14,6 +14,9 @@ flask = "^3.1.2"
 matplotlib = "^3.10.7"
 gunicorn = "^23.0.0"
 flask-cors = "^6.0.1"
+sqlalchemy = "^2.0.44"
+psycopg2 = "^2.9.11"
+geoalchemy2 = "^0.18.1"
 
 
 [build-system]
